2010-03-22  Henry Butowsky  <henryb@hush.com> 

	* Add '--mk_rec_dmn' switch to ncks: 
	 Allows user to (re)define the record dimension. If the redefined record dim is not the
	 first dimension of a selected var then ncks bombs out with a warning message.

2010-03-15  Charlie Zender  <zender@uci.edu>

	* Remove consti-fication of return values in global functions

2010-03-13  Charlie Zender  <zender@uci.edu>

	* Comment-out "\input texinfo" from my-bib-macros.texi to prevent
	that string from appearing in printed output. 
	
2010-03-11  Charlie Zender  <zender@uci.edu>

	* Fix ncrename.c to not die after skipping non-existent targets
	(variables/dimensions/attributes) preceded by '.'. Longstanding bug!

	* Supercede NO_REC_DMN with FIX_REC_DMN

	* Various cleanups of ncoGrammer.g, nco_mss_val.c, ncks.c, nco_var_utl.c

2010-03-11  Henry Butowsky  <henryb@hush.com> 

	* Add '--no_rec_dmn' switch to ncks: causes record dimension in
	input to be converted to a regular dimension in output.

2010-03-01  Henry Butowsky  <henryb@hush.com> 

	* Added to manual chapter on Re-basing Time Coordinate

2010-02-16  Charlie Zender  <zender@uci.edu>

	* Cleanup nco_lmt.c

2010-02-16  Henry Butowsky  <henryb@hush.com> 

	* Add ncrcat tests for modifications below
	
2010-02-15  Henry Butowsky  <henryb@hush.com> 

	* Hyperslab limits of type lmt_crd_val/lmt_udu_sng with 
	stride > 1 now work with multifile operators, e.g.,
	ncrcat -v time -d time,3.0,30.0,8 t1.nc t2.nc out.nc

2010-02-09  Charlie Zender  <zender@uci.edu>

	* Remove MPI print line from non-MPI code in mpncra.c to fix build
	bug reported by Mark Van Moer

2010-02-05  Charlie Zender  <zender@uci.edu>

	* Cleanup ncbo.c

2010-01-29  Henry Butowsky  <henryb@hush.com> 

	* Tidy-up value_list action in tree parser.
	  Added value_list_string for NC_STRING

	* Added ncap_typ_hgh() to libnco

2010-01-26  Charlie Zender  <zender@uci.edu>

	* As of 20091030 NCO_TYP_INT defaults to int rather than long