@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.352 2010-03-12 07:08:15 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.353 2010-03-30 04:08:06 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.1 are ready. 
 
@@ -34,6 +34,12 @@ A. Fix behavior of ncrename when target (variable/dimension/attribute
 A. ncks warns when printing packed contents of packed variables
 
 A. Fix erroneous ncbo WARNING about non-duplicated variables fxm
+
+A. Add ncks --mk_rec_dmn dmn_nm switch to define the indicated dimension
+   as the record dimension. The specified dimension should be the
+   first dimension, not an inner dimension, of some variable.
+   Otherwise ncks will fail with an error.
+   ncks --mk_rec_dmn time in.nc out.nc
    
 C. ncap2 supports the GSL (Chapter 36) least-squares fitting routines, e.g.,
    ncap2 -v -O -s 'defdim("dmn",100);sigma[dmn]=1.0;var1=gsl_ran_gaussian(sigma);var2=gsl_stats_skew(var1);print(var2)' in.nc out.nc
